v 1.4
	#129 - Small bug uploading images.
v 1.3.3
	#102 - Unsigned field type bug.
	#103 - Multiple columns search filtering at datatables.
	#113 - Relation n_n missing when unset field.
	Adding languages: Bengali, Slovak, Korean.
	Stop supporting Codeigniter version 2.1.1 with ugly workarounds.
	Use fancybox for previewing the thumbnails at the list page.
	Transliteration characters for uploaded files.
	Updating jQuery Plugins and third party addons:
		- Updating jQuery to version 1.8.2
		- jQuery UI Library to v1.9.0.
		- Timepicker Addon for jQuery UI Datepicker to v1.0.5.
		- jQuery UI Multiselect and adding localization files for it.
		- jQuery Numeric plugin to v1.3.1.
		- jQuery Chosen plugin to v0.9.8.
		- Updating CKEditor to v3.6.5 with minimum setup.
		- Updating TinyMCE to v3.5.7.
v 1.3.2
	#98 - Add more field types.
			- Dropdown field type.
			- Multiselect field type
	#101 - Size of a request header field exceeds server limit for datatables.
	#97 - Add new method and functionality - unset_jquery_ui
	#46 - Supporting IE7.
	#95 - Export and print doesn't remove the html tags.
v 1.3.1
	Updating "Export","Print" and "Minimize/Maximaze" lang strings
	Renewing to the latest tinymce version
	Jquery version 1.8.1 
	Fixing small bugs
v 1.3
	#73 - Jquery version 1.8.0
	#88 - Where clause in set_relation_n_n.
	#87 - Templating system to the  set_relation_n_n method.
	#82 - Have a thumbnail after uploading an image.
	Adding Czech Language.
	Internationalisation for datepicker ui and datetime picker.
	#86 - Print functionality to both flexigrid and datatables theme.
	#85 - Export functionality to both flexigrid and datatables theme.
	Print functionality to datatables theme.
	Having CKEditor as the default texteditor for grocery CRUD.
	Adding Markitup texteditor. Really useful editor for developers.
	#68 - set_relation doesn't work as expected when the third field (title name) is the same on two or more set_relation methods.