@@ -146,24 +146,15 @@ function delete_row(delete_url , row_id)
 			{					
 				if(data.success)
 				{
-					$('#ajax_refresh_and_loading').trigger('click');
+					success_message(data.success_message);
 					
-					if ($('#report-success').is(":empty")) {
-						$('#report-success').html( data.success_message ).slideDown('slow');
-					} else {
-						$('#report-success').html( data.success_message ).fadeOut('fast').fadeIn('slow').fadeOut('fast').fadeIn('slow');
-					}					
-					
-					$('#report-error').html('').slideUp('fast');
 					$('tr#row-'+row_id).addClass('row_selected');
 					var anSelected = fnGetSelected( oTable );
 					oTable.fnDeleteRow( anSelected[0] );					
 				}
 				else
-				{
-					$('#report-error').html( data.error_message ).slideUp('fast').slideDown('slow');						
-					$('#report-success').html('').slideUp('fast');						
-					
+				{	
+					success_message(data.error_message);
 				}
 			}
 		});
