@@ -1,5 +1,7 @@
 v 1.4
 	#129 - Small bug uploading images.
+	Add and Edit forms are now loaded through AJAX
+	Noty Jquery Plugin to load all the messages (errors, success, information)
 v 1.3.3
 	#102 - Unsigned field type bug.
 	#103 - Multiple columns search filtering at datatables.
